--- a/src/main/resources/api_errors.properties
+++ b/src/main/resources/api_errors.properties
@@ -2,3 +2,5 @@
 templates-1=Name is mandatory and cannot be blank
 
 generic-1={0} is invalid
+
+error-1= Sorry, internal server error, try again later
