--- a/src/main/resources/api_errors.properties
+++ b/src/main/resources/api_errors.properties
@@ -1,5 +1,9 @@
 ##Códigos de erros de exceptions
 templates-1=Name is mandatory and cannot be blank
+templates-2=Type is mandatory
+templates-3=Volume is mandatory
+templates-4=Volume should be greater than zero
+templates-5=Template already exists
 
 generic-1={0} is invalid
 
